--- a/src/style/front.css
+++ b/src/style/front.css
@@ -1,21 +1,42 @@
 @import url('https://fonts.googleapis.com/css?family=Orbitron|VT323');
-:root {
---primary: #369;
---secondary: rgb(170, 221, 255);
+html{
+  cursor: pointer;
 }
-
 body{
-display: flex;
-flex-direction: row;
-flex-wrap: nowrap;
-justify-content: flex-start;
-align-items: center;
-
-background-color: rgba(170, 221, 255, 0.5);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: var(--bodycolor);
+  font-family: 'Orbitron';
 }
+.on{
+  --primary: #369;
+ --secondary: #adf;
+ --bodycolor:  rgba(170, 221, 255, 0.5);
+}
+.off{
+  --primary: #ff5b00;
+  --secondary: #ff7979;
+  --bodycolor:  	#bb2124;
+   animation-name: color;
+   animation-duration: 1s;
+   animation-iteration-count: infinite;
+   animation-direction: alternate-reverse;
+   animation-timing-function: ease;
+ }
+ 
+ @keyframes color {
+   to {
+     background-color: pink;
+   }
+ }
+
 .esqBar{
 align-self: auto;
 width: 100%;
+ -webkit-app-region: drag;
 }
 .dirBar{
 align-self: auto;
@@ -24,7 +45,6 @@ display: flex;
 justify-content: center;
 -webkit-user-select: none;
 user-select: none;
--webkit-app-region: drag;
 }
 progress{
 width:  100%;
@@ -48,39 +68,56 @@ syntax: '<number>';
 inherits: true;
 initial-value: 0;
 }
-
-[role="progressbar"] {
---percentage: var(--value);
---size: 70px;
-/* animation: progress 2s 0.5s forwards; */
-width: var(--size);
-aspect-ratio: 1;
-border-radius: 50%;
-position: relative;
-overflow: hidden;
-display: grid;
-place-items: center;
-}
-
-[role="progressbar"]::before {
-content: "";
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background: conic-gradient(var(--primary) calc(var(--percentage) * 1%), var(--secondary) 0);
-mask: radial-gradient(white 55%, transparent 0);
-mask-mode: alpha;
--webkit-mask: radial-gradient(#0000 55%, #000 0);
--webkit-mask-mode: alpha;
-}
-
-[role="progressbar"]::after {
-content: '';
-width: 30px;
-height: 30px;
-background: var(--primary);
-/* clip-path: polygon(100% 50%, 0 0, 0 100%); */
-clip-path: polygon(0% 0%, 0% 100%, 40% 100%, 40% 0, 60% 0, 60% 100%, 100% 100%, 100% 0%);
-}
+#control {
+    --percentage: var(--value);
+    --size: 70px;
+    /* animation: progress 2s 0.5s forwards; */
+    width: var(--size);
+    aspect-ratio: 1;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    display: grid;
+    place-items: center;
+  }
+  
+  #control::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: conic-gradient(var(--primary) calc(var(--percentage) * 1%), var(--secondary) 0);
+    mask: radial-gradient(white 55%, transparent 0);
+    mask-mode: alpha;
+    -webkit-mask: radial-gradient(#0000 55%, #000 0);
+    -webkit-mask-mode: alpha;
+  }
+  
+  .pause::after {
+    content: '';
+    width: 30px;
+    height: 30px;
+    margin-left: 0px;
+    background: var(--primary);
+    clip-path: polygon(0% 0%, 0% 100%, 40% 100%, 40% 0, 60% 0, 60% 100%, 100% 100%, 100% 0%);
+    
+  }
+  
+  .play::after {
+    content: '';
+    width: 30px;
+    height: 30px;
+    margin-left: 5px;
+    background: var(--primary);
+    clip-path: polygon(100% 50%, 0 0, 0 100%);
+  }
+  
+  #activityTitle{
+    color: #ccc;
+    position: absolute;
+    top: 0;
+    left: auto;
+    text-shadow: 1px 1px 1px #333;
+  }
